aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coingate-service
spec:
  type: ClusterIP
  selector:
    app: coingate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
