aws/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coingate-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: api.coingate.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: coingate-service
            port:
              number: 80
  tls: 
  - hosts:
    - api.coingate.com
    secretName: coingate-cert
